--- a/guestbook.html
+++ b/guestbook.html
@@ -12,10 +12,10 @@
         <a href="index.html"><img id="logo" src="/PHOTO/logo.png"></a>
         <hr />
     <ul>
-        <li><a href="index.html">Home</a></li><br>
-        <li><a href="explanation.html">What is liminal space?</a></li><br>
+        <li><a href="/index.html">Home</a></li><br>
+        <li><a href="/explanation.html">What is liminal space?</a></li><br>
         <li><a href="#contact">Gallery</a></li><br>
-        <li><a href="#about">Guestbooks</a></li>
+        <li><a href="/guestbook.html">Guestbooks</a></li>
       </ul>
     </div>
 
