--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="sidemenu">
-        <a href="index.html"><img id="logo" src="/PHOTO/logo.png"></a>
+        <a href="index.html"><img id="logo" src="https://raw.githubusercontent.com/jyoze0320/liminalspace/main/PHOTO/logo.png"></a>
         <hr />
     <ul>
         <li><a href="/index.html">Home</a></li><br>
@@ -20,7 +20,7 @@
     </div>
 
     <div id="content">
-        <IMG SRC="/PHOTO/HOME.png" style="width: auto; height: 800px;">
+        <IMG SRC="https://github.com/jyoze0320/liminalspace/blob/main/PHOTO/HOME.png?raw=true" style="width: auto; height: 800px;">
     </div>
 </body>
 </html>
