--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <hr />
     <ul>
         <li><a href="/index.html">Home</a></li><br>
-        <li><a href="/explanation.html">What is liminal space?</a></li><br>
+        <li><a href="https://github.com/jyoze0320/liminalspace/blob/main/explanation.html">What is liminal space?</a></li><br>
         <li><a href="#contact">Gallery</a></li><br>
         <li><a href="/guestbook.html">Guestbooks</a></li>
       </ul>
