--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <a href="index.html"><img id="logo" src="https://raw.githubusercontent.com/jyoze0320/liminalspace/main/PHOTO/logo.png"></a>
         <hr />
     <ul>
-        <li><a href="https://jyoze0320.github.io/liminalspace/index.html">Home</a></li><br>
+        <li><a href="https://jyoze0320.github.io/liminalspace/">Home</a></li><br>
         <li><a href="https://jyoze0320.github.io/liminalspace/explanation.html">What is liminal space?</a></li><br>
         <li><a href="#contact">Gallery</a></li><br>
         <li><a href="https://jyoze0320.github.io/liminalspace/guestbook.html">Guestbooks</a></li>
