--- a/guestbook.html
+++ b/guestbook.html
@@ -8,24 +8,15 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="sidemenu">
-12
+ <div id="sidemenu">
         <a href="index.html"><img id="logo" src="https://raw.githubusercontent.com/jyoze0320/liminalspace/main/PHOTO/logo.png"></a>
-13
         <hr />
-14
     <ul>
-15
-        <li><a href="https://jyoze0320.github.io/liminalspace/index.html">Home</a></li><br>
-16
+        <li><a href="https://jyoze0320.github.io/liminalspace/">Home</a></li><br>
         <li><a href="https://jyoze0320.github.io/liminalspace/explanation.html">What is liminal space?</a></li><br>
-17
         <li><a href="#contact">Gallery</a></li><br>
-18
         <li><a href="https://jyoze0320.github.io/liminalspace/guestbook.html">Guestbooks</a></li>
-19
       </ul>
-20
     </div>
 
     <div id="content">
