--- a/guestbook.html
+++ b/guestbook.html
@@ -45,7 +45,7 @@
             </div>
 
             <div class="textbox">
-                <textarea name="content" rows="5" id="content" spellcheck="false" required="" placeholder="故플래시를 위한 조의문을 써주세요."></textarea>
+                <textarea name="content" rows="5" id="content" spellcheck="false" required="" placeholder="방명록."></textarea>
             </div>
 
             <div class="g-recaptcha" data-sitekey="6LeNDvUdAAAAAO7cOa0AbHByxtoex-o_GyBRzY9i"></div>
