--- a/explanation.html
+++ b/explanation.html
@@ -22,7 +22,7 @@
     <div id="content">
         <div id="explanation">
         <h1>Liminal Space?</h1>
-        <img src="/PHOTO/backroom.webp"  style="height: 500px;">
+        <img src="https://raw.githubusercontent.com/jyoze0320/liminalspace/main/PHOTO/backroom.webp"  style="height: 500px;">
         경계 공간은 으스스하고 외롭고 종종 초현실적으로 보이는 비어 있거나 버려진 장소를 묘사하는 인터넷 미학 의 주제입니다. 
         리미널 공간은 일반적으로 전환( 리미널리티 의 개념과 관련된 ) 또는 향수를 불러일으키는 호소의 장소입니다.
 환경 심리학 저널(Journal of Environmental Psychology) 의 연구 에 따르면 한계 공간은 건축과 물리적 장소의 기묘한 계곡 에 속하기 때문에 으스스하거나 이상하게 보일 수 있습니다. 
