--- a/explanation.html
+++ b/explanation.html
@@ -41,7 +41,7 @@ https://en.wikipedia.org/wiki/Liminal_space_(aesthetic)
 <br><br>
 
 <h1>Korea Liminal Space?</h1>
- <img src="https://github.com/jyoze0320/liminalspace/blob/main/PHOTO/KOREA.png">
+ <img src="https://raw.githubusercontent.com/jyoze0320/liminalspace/main/PHOTO/KOREA.png">
 이 홈페이지는 한국의 경계공간 사진을 담아내는 사이트 입니다. 어떤것은 운영자가 직접 촬영하며, 대한민국의 웹 사이트에서 찍은 사진을 선별해서 올립니다. 해당 사진에 대한 저작권은 당사자에게 존재합니다.
 본 홈페이지는 2023년 6월 6일에 생성되었습니다.
 
